--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,15 @@
 
 body {
-    background-image: url(../images/crossline-dots.png);
+    background-image: url(../images/mercury-liquid-metal.jpg);
     background-repeat: repeat;
-    border: 10px solid #545151;
-    border-radius: 30px;
+    border: 10px solid #434343;
 }
 
 .container {
 
-    background-color: darkgrey;
-    border: 10px solid #545151;
-    border-radius: 30px;
+    background-image: url(../images/question-background.png);
+    background-repeat: repeat;
+    border: 10px solid #434343;
     width: 900px;
     height: 700px;
 }
@@ -24,7 +23,7 @@ body {
 
 #start {
      border-radius: 10px;
-     background-color: #545151;
+     background-color: silver;
 }
 
 div {
